--- a/main.html
+++ b/main.html
@@ -37,8 +37,9 @@
 
 	<br><br>
 
-	<a style="color:blue;" href="https://acciojob.com/blog/dsa-vs-competitive-programming/">DSA vs. Competitive Programming</a>
+	<a style="color:blue;" href="https://acciojob.com/blog/untitled-19/">Complete Guide on FlexBox</a>
 
+	<p style="color:blue; text-decoration:underline;">As a job seeker, you may wonder...</p>
 	
 </body>
 
